--- a/mta.yaml
+++ b/mta.yaml
@@ -1,5 +1,5 @@
 _schema-version: '3.1'
-ID: microcap02
+ID: microcap20
 version: 1.0.0
 description: "A simple CAP project."
 parameters:
@@ -10,7 +10,7 @@ build-parameters:
       commands:
         - npx cds build --production
 modules:
-  - name: microcap02-srv
+  - name: microcap20-srv
     type: nodejs
     path: gen/srv
     parameters:
@@ -22,28 +22,29 @@ modules:
         properties:
           srv-url: ${default-url}
     requires:
-      - name: same-uaa
-      - name: microcap02-db
+      - name: microcap20-uaa
+      - name: microcap20-db
 
-  - name: microcap02-db-deployer
+  - name: microcap20-db-deployer
     type: hdb
     path: gen/db
     parameters:
       buildpack: nodejs_buildpack
     requires:
-      - name: microcap02-db
+      - name: microcap20-db
 
 resources:
-  - name: same-uaa
+  - name: microcap20-uaa
     type: org.cloudfoundry.managed-service
     parameters:
       service: xsuaa
       service-plan: application
       path: ./xs-security.json
       config:
-        xsappname: same-uaa
+        xsappname: microcap20-uaa
         tenant-mode: dedicated
-  - name: microcap02-db
+
+  - name: microcap20-db
     type: com.sap.xs.hdi-container
     parameters:
       service: hana
