--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sap/cds-hana": "^2",
     "@sap/xssec": "^3.6.1",
     "express": "^4",
+    "mbt": "^1.2.27",
     "passport": "^0"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
   },
   "cds": {
     "requires": {
-      "db": "sql"
+      "db": "hana"
     }
   }
 }
